--- a/style.scss
+++ b/style.scss
@@ -315,3 +315,70 @@ body{
     }
 
 }
+.tariffs{
+    background-color: #b59797;
+    padding-left: 60px;
+    &__wrap{
+        background-color: $bg__color;
+        padding-top: 120px;
+        padding-bottom: 150px;
+    }
+    &__title{
+        font-size: 80px;
+        color: $font__color;
+        margin-bottom: 25px;
+   } 
+    &__card-block{
+        display: flex;
+        align-items: center;
+        gap: 40px;
+        width: 100%;
+    }
+    &__card{
+        background-color: #b59797;
+        padding: 40px 32px 52px 32px;
+        color: white;
+
+        ul{
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            margin-bottom: 15px;
+        }
+
+
+
+        li{
+            display: flex;
+            align-items: center;
+            flex-wrap: nowrap;
+            gap: 8px;
+        }
+
+        li::before{
+            content: "";
+            display: block;
+            width: 20px;
+            height: 1px;
+            background-color: #fff;        
+        }
+
+
+   }
+
+   &__li_through{
+    text-decoration: line-through;
+}
+   &__card-title{
+    font-size: 20px;
+    margin-bottom: 10px;
+   }
+   &__btn{
+    padding: 17px 80px;
+    background-color: #fff;
+    border: 2px solid #8d6b5d;
+    color: $font__color;
+    width: max-content;
+    margin-bottom: -77px;
+   }
+}
